--- a/poi-admin/package.json
+++ b/poi-admin/package.json
@@ -16,12 +16,15 @@
   },
   "dependencies": {
     "axios": "0.18.1",
+    "element-china-area-data": "^4.1.2",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
+    "jsonp": "^0.2.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
+    "vue-jsonp": "^0.1.8",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
