--- a/poi-admin/.env.development
+++ b/poi-admin/.env.development
@@ -2,7 +2,12 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = ''
+#VUE_APP_BASE_API = 'http://test-liuwa.hupovip.net'
+VUE_APP_BASE_API = 'http://test-liuwa-kaka.hupovip.cn'
+
+
+
+
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
